# ACE-Step-DAW

./: .agent-session-id  .gitignore  AGENTS.md  CLAUDE.md  README.md  agent-prompt.txt  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: do-todo.md  product-manager.md  refactorer.md  researcher.md  reviewer.md  tester.md
.claude/commands/: full-cycle.md  research-cycle.md  todo-all.md
.claude/plans/: curried-painting-pine-agent-ac44b8ae39eb64ae4.md
.claude/rules/: autonomous-workflow.md  development-process.md  git-conventions.md  testing-requirements.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  lego-from-silence-timing.md
.github/workflows/: auto-resolve-issue.yml  docs.yml  e2e.yml  ops-on-merge.yml  project-manager.yml  test.yml
.llm/: BLOCKERS.md  PIPELINE.md  TASK_QUEUE.md  TEAM.md  todo.md
.llm/research/: bpm-chord-detection-research.md
companion/src/: audio_thread.rs  host_impl.rs  main.rs  plugin_host.rs  preset_storage.rs  protocol.rs  vst3_loader.rs  ws_server.rs
crates/ace-plugin-host/: Cargo.toml
crates/ace-plugin-host/src/: audio.rs  host.rs  lib.rs  loader.rs  types.rs
docs/: dev-process.md
docs/api/: ACTION_ERRORS.md
docs/design/: CLAUDE_CODE_SKILLS.md  UX_IMPROVEMENT_CHECKLIST.md
docs/plans/: feat-recording.md  (+10 more)
scripts/: download-models.sh  export-consonance-ace.py  ops-cycle.sh  verify-onnx-models.py
src/: App.tsx  globals.d.ts  index.css  main.tsx
website/: changelog.md  index.md  roadmap.md
(+706 files in other folders)
